name:                autoharvest
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/DaveCTurner/autoharvest#readme
license:             BSD3
license-file:        LICENSE
author:              David Turner
maintainer:          dave.c.turner@gmail.com
copyright:           (c) David Turner
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable autoharvest
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
    , aeson
    , async
    , bytestring
    , http-client
    , http-client-tls
    , http-types
    , optparse-applicative
    , text
    , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DaveCTurner/autoharvest
